<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.result.ResultFragment">

    <ProgressBar
    android:id="@+id/progressBar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:elevation="3dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        android:gravity="center"
        android:visibility="gone"
        android:lineSpacingExtra="3dp"
        android:text="@string/error_message"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardLayout"
        android:layout_width="250dp"
        android:layout_height="200dp"
        app:cardCornerRadius="22dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            >

            <TextView
                android:id="@+id/card_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_brand"
                android:layout_marginTop="@dimen/result_margin_10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="MasterCard"/>

            <TextView
                android:id="@+id/card_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_type"
                android:layout_marginTop="@dimen/result_margin_10"
                app:layout_constraintStart_toStartOf="@id/card_brand"
                app:layout_constraintTop_toBottomOf="@id/card_brand"
                tools:text="Debit"/>

            <TextView
                android:id="@+id/bank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bank"
                android:layout_marginTop="@dimen/result_margin_10"
                app:layout_constraintStart_toStartOf="@id/card_type"
                app:layout_constraintTop_toBottomOf="@id/card_type"
                tools:text="FirstBank Nigeria"/>

            <TextView
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:layout_marginTop="@dimen/result_margin_10"
                app:layout_constraintStart_toStartOf="@id/bank"
                app:layout_constraintTop_toBottomOf="@id/bank"
                tools:text="Nigeria"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
